--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 		<meta name="description" content="">
 		<meta name="author" content="">
 		<title></title>
-		<script src="../d3-mitch-tree.min.js"></script>
-		<link rel="stylesheet" type="text/css" href="../d3-mitch-tree.min.css">
-		<link rel="stylesheet" type="text/css" href="../d3-mitch-tree-theme-default.min.css">
+		<script src="d3-mitch-tree.min.js"></script>
+		<link rel="stylesheet" type="text/css" href="d3-mitch-tree.min.css">
+		<link rel="stylesheet" type="text/css" href="d3-mitch-tree-theme-default.min.css">
 	</head>
 	<body>
 		<section id="visualisation" style="border: 1px black solid; max-width: 900px;">
